--- a/hookit/templates/setup.sql.erb
+++ b/hookit/templates/setup.sql.erb
@@ -1,17 +1,29 @@
+<% databases.each do |database| %>
+CREATE DATABASE IF NOT EXISTS <%= database %>;
+<% end %>
+
+<% users.each do |user| %>
+  <% user[:meta][:privileges].each do |privilege| %>
+GRANT <%= privilege[:privilege] %> ON <%= privilege[:on] %> TO '<%= user[:username] %>'@'%' IDENTIFIED BY '<%= user[:password] %>' <%= privilege[:grant] ? "WITH GRANT OPTION" : "" %>;
+GRANT <%= privilege[:privilege] %> ON <%= privilege[:on] %> TO '<%= user[:username] %>'@'localhost' IDENTIFIED BY '<%= user[:password] %>' <%= privilege[:grant] ? "WITH GRANT OPTION" : "" %>;
+  <% end %>
+SET PASSWORD FOR '<%= user[:username] %>' = PASSWORD('<%= user[:password] %>');
+<% end %>
+
 -- give root supreme control
-GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;
+-- GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;
 
 -- create default database
-CREATE DATABASE IF NOT EXISTS gonano;
+-- CREATE DATABASE IF NOT EXISTS gonano;
 
 -- give supreme control of default database to default user
-GRANT ALL PRIVILEGES ON gonano.* TO 'nanobox'@'%' identified by 'password' WITH GRANT OPTION;
+-- GRANT ALL PRIVILEGES ON gonano.* TO 'nanobox'@'%' identified by 'password' WITH GRANT OPTION;
 
 -- give default database user permission to SHOW (ENGINE|PROCESSLIST)
-GRANT PROCESS ON *.* TO 'nanobox'@'%';
+-- GRANT PROCESS ON *.* TO 'nanobox'@'%';
 
 -- give default user super privilege
-GRANT SUPER ON *.* TO 'nanobox'@'%';
+-- GRANT SUPER ON *.* TO 'nanobox'@'%';
 
 -- remove anonymous accounts (must ensure exists before deleting)
 GRANT USAGE ON *.* TO ''@'localhost';
