--- a/src/templates/garbd.erb
+++ b/src/templates/garbd.erb
@@ -37,7 +37,7 @@ start(){
       echo "Found node - $NODE"
       if [[ $(test_port ${NODE} 3306) ]]; then
         echo "Found running mysqld"
-        /data/bin/garbd -n garbd -a gcomm://<%= nodes.join ':4567,' %>:4567 -g <%= payload[:service][:id].delete('-') %>
+        /data/bin/garbd -n garbd -a gcomm://<%= nodes.join ':4567,' %>:4567 -g <%= payload[:component][:id].delete('-') %>
         exit $SMF_EXIT_OK
       fi
     fi
