--- a/src/templates/monitor-narc.conf.erb
+++ b/src/templates/monitor-narc.conf.erb
@@ -21,7 +21,7 @@ syslog-facility local0
 ##########
 
 # remote syslog
-remote-host <%= logtap %>
+remote-host <%= logvac %>
 remote-port 514
 remote-proto udp
 
