--- a/src/templates/my-prod.cnf.erb
+++ b/src/templates/my-prod.cnf.erb
@@ -95,7 +95,9 @@ innodb_log_group_home_dir       = /data/var/db/mysql
 innodb_data_file_path           = ibdata1:100M:autoextend
 innodb_buffer_pool_size         = <%= config[:innodb_buffer_pool_size] || INNODB_BUFFER_POOL_SIZE %>
 innodb_log_file_size            = 100M
+<% if version < 5.7 -%>
 innodb_additional_mem_pool_size = <%= config[:innodb_additional_mem_pool_size] %>
+<% end %>
 innodb_log_buffer_size          = <%= config[:innodb_log_buffer_size] %>
 innodb_flush_log_at_trx_commit  = <%= config[:innodb_flush_log_at_trx_commit] %>
 innodb_lock_wait_timeout        = <%= config[:innodb_lock_wait_timeout] %>
@@ -118,7 +120,9 @@ table_open_cache          = <%= config[:table_open_cache] || TABLE_CACHE %>
 thread_cache_size         = <%= config[:thread_cache_size] || THREAD_CACHE_SIZE %>
 query_cache_type          = <%= config[:query_cache_type] %>
 back_log                  = <%= config[:back_log] || BACK_LOG %>
+<% if version < 5.7 -%>
 thread_concurrency        = <%= config[:thread_concurrency] || (`mpstat | tail -n +2 | wc -l`.to_i * 2 + 2) %>
+<% end %>
 tmpdir                    = /var/tmp
 max_connections           = <%= config[:max_connections] || MAX_CONNECTIONS %>
 max_allowed_packet        = <%= config[:max_allowed_packet] %>
@@ -171,6 +175,7 @@ binlog_format     = ROW
 log-bin           = /data/var/db/mysql/bin.log
 max_binlog_size   = 100M
 expire_logs_days  = 7
+server_id         = <%= member[:uid] %>
 <% end -%>
 log-error         = /var/log/mysql/error.log
 
